ui: Fix z-index for editor footer
Fixes #6394

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1491,7 +1491,7 @@ input.color_edit:checked + label {
 }
 
 .editor-footer {
-  z-index: 1000;
+  z-index: 999;
   position: relative;
 }
 
